--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nuxt": "^1.4.1",
     "vue": "^2.5.16",
     "vue-cli": "^2.9.6"
+  },
+  "devDependencies": {
+    "vue-svg-loader": "^0.11.0"
   }
 }
