--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "babel-loader": "^7.1.4",
     "nuxt": "^1.4.1",
     "vue": "^2.5.16",
-    "vue-cli": "^2.9.6"
+    "vue-cli": "^2.9.6",
+    "vue-pdf": "^3.3.1"
   },
   "devDependencies": {
     "vue-svg-loader": "^0.11.0"
